--- a/apps/web-app/src/components/Navigation/NavigationMenu/NavigationMenuItem/navigation-menu-item.scss
+++ b/apps/web-app/src/components/Navigation/NavigationMenu/NavigationMenuItem/navigation-menu-item.scss
@@ -1,3 +1,11 @@
 .nav-item {
-  @apply px-3 py-2 flex text-sm items-center uppercase font-bold text-white hover:opacity-75;
+  @apply px-3 py-2 flex text-sm items-center uppercase font-bold md:border-b-0 border-b border-opacity-10 border-custom-white;
+
+  &.active {
+    @apply text-custom-orange;
+  }
+
+  &:hover {
+    @apply text-custom-orange;
+  }
 }
