--- a/apps/web-app/src/components/Navigation/NavigationMenu/NavigationMenuItem/navigation-menu-item.scss
+++ b/apps/web-app/src/components/Navigation/NavigationMenu/NavigationMenuItem/navigation-menu-item.scss
@@ -1,5 +1,5 @@
 .nav-item {
-  @apply px-3 py-2 flex text-base items-center uppercase font-bold md:border-b-0 border-b border-opacity-10 border-grey-100;
+  @apply px-3 py-2 flex duration-75 text-base items-center uppercase font-bold md:border-b-0 border-b border-opacity-10 border-grey-100;
 
   &.active {
     @apply text-orange-700;
