--- a/src/styles/global.module.css
+++ b/src/styles/global.module.css
@@ -1,7 +1,7 @@
 .app {
     text-align: center;
-    padding-top: 10px;
     background: linear-gradient(139.88deg, #163c5b 2.97%, #853b50 110%);
     min-height: 100vh;
     color: white;
+    padding-bottom: 10px;
 }
