hide clerk branding footer

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,3 +8,8 @@ body {
     text-decoration: none;
     color: inherit;
 }
+
+/*hide Clerk footer in <UserButton /> component */
+.cl-userButtonPopoverFooter {
+    display: none;
+}
